# project-context

./: .cursorrules  .gitignore  README.md  env.example  idea.md  pyproject.toml  python_structure.md
scripts/: setup_dev.py
src/: __init__.py  config.py  main.py  test_graph.py
src/services/: __init__.py  categorizer.py  context_manager.py  embeddings.py  relationships.py  similarity.py
src/storage/: __init__.py  graph.py  graph_db.py  models.py  vector_db.py
src/tools/: __init__.py  delete_context.py  get_context.py  get_related.py  list_categories.py  store_context.py
