[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-context-mcp"
version = "0.1.0"
description = "A smart context management system for coding projects using knowledge graphs and vector databases"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.13.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pandas>=1.5.0",
    "pyarrow>=12.0.0",
    "neo4j-graphrag[openai]>=0.1.0",
    "neo4j>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
project-context-mcp = "project_context_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_context_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 